2003-02-12  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: wrong time calculation for Semaphor with timeout.

	* libxmt: Version 1.6.6

2003-02-05  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: add Semaphor wait with timeout.

	* libxmt: Version 1.6.5

2003-01-19  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: modified portable mutex templates---separate
	mutex initialization for mutex options opportunity;
	use XSI recursive mutexes feature if possible.

	* libxmt: Version 1.6.4

2003-01-17  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: experimental implementation of portable mutexes,
	based on template specialization technique; add mutex
	scope [aka PROCESS_PRIVATE/SYSTEM_SCOPE].

	* libxmt: Version 1.6.3
	
2003-01-15  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc (Repository): Add POSIX 1003.1-2001 semaphores,
	ones predecessors on Solaris, and semaphores on Wins.

	* libxmt: Version 1.6.2

2003-01-07  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc: add delay function (sleep for interval
        of time); fix wrong time conversion for Win in sleep.

2002-09-25  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libxmt: prepare for public on sourceforge.net under
	the Academic Free License Version 1.0

2002-08-03  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: add std:: namespace for exception class,
	as required by gcc 3.1.1

	* libxmt: Version 1.6.1
	
2002-07-15  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* Makefile.inc, time.h, time.cc (Repository):
	time-related functions,	that has problems with
	portability and/or mt-safety will be here.

2002-07-12  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libxmt: Version 1.6.0

2002-07-11  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc (Repository): add try_wait_time,
	thanks for Ivan Vigasin.

2002-06-23  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc, xmt.h (Repository): remove signal throw---seems not work